Adjusted explain toggler, fixed dark theme colors for explain components and containers, fixed z-index of explain container.

--- a/OmniDB/OmniDB_app/static/OmniDB_app/scss/omnidb.scss
+++ b/OmniDB/OmniDB_app/static/OmniDB_app/scss/omnidb.scss
@@ -787,6 +787,10 @@ button.close {
 
 }
 
+.omnidb__query-result-tabs__content .table-resultset td {
+  padding: 1px;
+}
+
 
 /* RESIZE GRID */
 /* grid z-index is (modal_z-index - 1) */
